--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.16",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +14,20 @@
     "@types/node": "^16.18.37",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "facepaint": "^1.2.1",
+    "graphql": "^16.7.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
+    "react-app-rewired": "^2.2.1",
+    "react-bootstrap": "^2.8.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "ts-loader": "^9.4.4",
+    "typeface-roboto": "^1.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "codegen": "graphql-codegen --config graphql-codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +55,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "4.0.1",
+    "@graphql-codegen/client-preset": "4.0.1",
+    "reactjs-percentage-circle": "^1.0.0",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
